<resources>
    <string name="app_name">OrganicTrade</string>

    <string name="btnLogin">Entrar</string>
    <string name="btnLogOut">Sair</string>
    <string name="btnMyTent">Meus Produtos</string>
    <string name="btnRegister">Cadastrar</string>
    <string name="btnRegisterProduct">Cadastrar Produto</string>
    <string name="btnConfirmarCompra">Confirmar compra</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnAdicionar">Adicionar</string>
    <string name="btnCadastrarTenda">Cadastrar Tenda"</string>


    <string name="hntEmail">Email</string>
    <string name="hntLogin">Login</string>
    <string name="hntName">Nome</string>
    <string name="hntPassword">Senha</string>
    <string name="hntPasswordConfirmation">Confirme a senha</string>
    <string name="hntPhone">Celular</string>
    <string name="hntSearch">Pesquisar</string>
    <string name="hntNomeDaTenda">Nome da Tenda</string>

    <string name="tstInvalidEmail">Por favor, entre com um nome válido.</string>
    <string name="tstInvalidPassword">Senha inválida</string>
    <string name="tstInvalidLogin">Login inválido</string>
    <string name="tstInvalidName">Nome inválido</string>
    <string name="tstInvalidLoginAndPassword">Login ou senha inválidos</string>
    <string name="tstLoginOrEmailRegistered">Login ou email já cadastrados</string>
    <string name="tstPasswordDontMatch">Senhas não conferem</string>
    <string name="tstRepeatPassword">Repeat Password</string>
    <string name="tstSuccessfullyRegistered">Cadastrado com sucesso </string>
    <string name="tstUnavaliableLogin">Login indisponível</string>
    <string name="tstInvalidValue">Valor inválido</string>
    <string name="tstNotDecimal">Não é decimal</string>

    <string name="txtAmount">Quantidade</string>
    <string name="txtEditar">Editar</string>
    <string name="txtPesquisar">Pesquisar</string>
    <string name="txtMoney">R$</string>
    <string name="txtSearch">Procurar item</string>
    <string name="txtLogout">Sair</string>
    <string name="txtEditPerfil">Editar perfil</string>
    <string name="txtEditItem">Editar Item</string>
    <string name="txtPrice">Preço</string>
    <string name="txtNewItem">Novo item</string>
    <string name="title_activity_maps">Map</string>

    <string name="myTent">Minha Tenda</string>

    <string name="MeusFavorito">Meus Favoritos</string>
    <string name="Histórico">Histórico</string>

    <string name="Vendas">Vendas</string>
    <string name="Compras">Compras</string>

    <string name="tentOf">Tenda de </string>
    <string name="tstPressAgainToCloseApp">Pressione o Botão Voltar novamente para fechar o Aplicativo</string>
    <string name="favoritos">Favoritos</string>

    <string-array name="SpnItems">
        <item>g</item>
        <item>Kg</item>
        <item>Und.</item>
    </string-array>

</resources>