<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mpoo.bsi.ufrpe.organictrade.OrganicTradeControler.GUI.RegisterUserActivity">

    <EditText
        android:id="@+id/registerUserEdtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hntName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        />

    <EditText
        android:id="@+id/registerUserEdtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerUserEdtName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hntLogin"
        />

    <EditText
        android:id="@+id/registerUserEdtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerUserEdtLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:hint="@string/hntPassword"
        />

    <EditText
        android:id="@+id/registerUserEdtRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerUserEdtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="textPassword"
        android:hint="@string/hntPasswordConfirmation"
        />

    <EditText
        android:id="@+id/registerUserEdtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/registerUserEdtPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/hntEmail"
        />

    <Button
        android:id="@+id/registerUserBtnRegister"
        android:background="@color/verdeParaTudo"
        android:textColor="#ffff"
        android:text="@string/btnRegister"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerUserEdtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        android:onClick="cadastrarUsuario"
        />

</RelativeLayout>