<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mpoo.bsi.ufrpe.organictrade.OrganicTradeControler.User.gui.LoginActivity">

    <Button
        android:id="@+id/loginBtnToCadastro"
        android:background="@color/verdeParaTudo"
        android:textColor="#ffff"
        android:text="@string/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/loginBtnEntrar"
        android:layout_alignStart="@+id/loginBtnEntrar"
        android:layout_marginBottom="18dp"
        />

    <Button
        android:id="@+id/loginBtnEntrar"
        android:background="@color/verdeParaTudo"
        android:textColor="#ffff"
        android:text="@string/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginBtnToCadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        />

    <EditText
        android:id="@+id/loginEdtLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:layout_above="@+id/loginBtnEntrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hntLogin"
        android:maxLines="1"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/loginEdtPassword"
        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginBtnEntrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="14dp"
        android:hint="@string/hntPassword"
        android:maxLines="1"
        />

    <ImageView
        android:id="@+id/loginImgLogo"
        app:srcCompat="@drawable/image_logo_oragnic_trade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginEdtLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>
