<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_tent_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mpoo.bsi.ufrpe.organictrade.OrganicTradeControler.item.gui.RegisterTentItemActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="@drawable/shadow_101322"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <TextView
            android:textAlignment="center"
            android:text="@string/txtEditItem"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:clickable="true"
            android:src="@drawable/icon_item_no_img"
            android:id="@+id/editRegisterTentItemImgProductImg"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <EditText
                android:id="@+id/editRegisterTentItemEdtProductAmount"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/txtAmount"
                android:inputType="number"
                />

            <Spinner
                android:id="@+id/editRegisterTentItemEdtProductUnity"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:text="@string/txtMoney"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"/>
            <EditText
                android:id="@+id/editRegisterTentItemEdtProductPrice"
                android:textAlignment="center"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/txtPrice"
                android:inputType="numberDecimal"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/editRegisterTentItemBtnRegister"
        android:text="@string/btnSalvar"
        android:background="@color/verdeParaTudo"
        android:textColor="#ffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        />
</LinearLayout>
